--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wordle-lookup",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fionatran.github.io/wordle-lookup",
+  "homepage": "https://fionatran.ca/wordle-lookup",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
